--- a/static/course/css/add.css
+++ b/static/course/css/add.css
@@ -18,6 +18,8 @@
 .page-wrapper {
     transition: 0.5s ease;
     margin-left: calc(100px + 3%);
+    margin-bottom: 30px;
+    margin-top: 0px;
 }
 
 .page-wrapper.active{
@@ -401,4 +403,276 @@ select{
 
 .content-text-input:focus {
     outline: 0;
+}
+
+
+.loader-upload {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgb(0, 0, 0,0.5);
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    text-align: center;
+}
+
+.loader-center{
+    position: absolute;
+    top: 48%;
+    left: 46%;
+}
+
+.loader {
+    border: 10px solid rgba(255, 255, 255, 0.3); /* Light grey */
+    border-top: 10px solid rgba(255,255,255,1);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1.5s linear infinite;
+    display: block;
+}
+  
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.upload-message{
+    position: absolute;
+    min-height: 100px;
+    width: 30%;
+    top: 40%;
+    left: 35%;
+    background-color: white;
+    padding: 20px 40px;
+    border-radius: 20px;
+    box-shadow: 8px 3px 30px 0 rgba(0,0,0,0.1);
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0.1;
+    }
+    30% {
+        opacity: 0.7;
+    }
+    60% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.message-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.failed-icon {
+    display: inline-block;
+    width: 6em;
+    height: 6em;
+    font-size: 10px;
+    border-radius: 50%;
+    border: 4px solid rgba(218, 13, 13, 0.5);
+    background-color: #fff;
+    position: relative;
+    overflow: hidden;
+    transform-origin: center;
+    animation: showSuccess 180ms ease-in-out;
+    transform: scale(1);
+ }
+
+.failed-icon__tip_1, .failed-icon__tip_2 {
+    display: block;
+    position: absolute;
+    height: 4px;
+    background-color: #d82424;
+    border-radius: 10px;
+}
+
+.failed-icon__tip_1 {
+    width: 4em;
+    top: 3em;
+    left: 1em;
+    transform: rotate(45deg);
+    animation: tip1InPlace 300ms ease-in-out;
+    animation-fill-mode: forwards;
+    animation-delay: 180ms;
+    visibility: hidden; 
+}
+
+.failed-icon__tip_2 {
+    width: 4em;
+    transform: rotate(-45deg);
+    top: 3em;
+    left: 1em;
+    animation: tip2InPlace 140ms ease-in-out;
+    animation-fill-mode: forwards;
+    visibility: hidden;
+    animation-delay: 440ms;
+}
+
+@keyframes tip1InPlace {
+    from {
+        width: 0;
+        top: 1em;
+        left: 0em;
+    }
+    to {
+        width: 4em;
+        top: 3em;
+        left: 1em;
+        visibility: visible;
+    }
+}
+
+@keyframes tip2InPlace {
+    from {
+        width: 0;
+        top: 4em;
+        left: 3em;
+    }
+    to {
+        width: 4em;
+        top: 3em;
+        left: 1em;
+        visibility: visible;
+    }
+}
+
+.success-icon {
+  display: inline-block;
+  width: 6em;
+  height: 6em;
+  font-size: 10px;
+  border-radius: 50%;
+  border: 4px solid rgba(10, 187, 48, 0.5);
+  background-color: #fff;
+  position: relative;
+  overflow: hidden;
+  transform-origin: center;
+  animation: showSuccess 180ms ease-in-out;
+  transform: scale(1);
+}
+
+.success-icon__tip, .success-icon__long {
+    display: block;
+    position: absolute;
+    height: 4px;
+    background-color: #4cc93f;
+    border-radius: 10px;
+}
+
+.success-icon__tip {
+    width: 2.4em;
+    top: 4em;
+    left: 0.8em;
+    transform: rotate(45deg);
+    animation: tipInPlace 300ms ease-in-out;
+    animation-fill-mode: forwards;
+    animation-delay: 180ms;
+    visibility: hidden;
+}
+
+.success-icon__long {
+    width: 4em;
+    transform: rotate(-50deg);
+    top: 3.70em;
+    left: 2.75em;
+    animation: longInPlace 140ms ease-in-out;
+    animation-fill-mode: forwards;
+    visibility: hidden;
+    animation-delay: 440ms;
+}
+
+@keyframes showSuccess {
+    from {
+        transform: scale(0);
+    }
+    to {
+        transform: scale(1);
+    }
+}
+
+@keyframes tipInPlace {
+    from {
+        width: 0em;
+        top: 0em;
+        left: -1.6em;
+    }
+    to {
+        width: 2.4em;
+        top: 3.5em;
+        left: 0.8em;
+        visibility: visible;
+    }
+}
+
+@keyframes longInPlace {
+    from {
+        width: 0em;
+        top: 5.1em;
+        left: 3.2em;
+    }
+    to {
+        width: 3.8em;
+        top: 2.9em;
+        left: 2.00em;
+        visibility: visible;
+    }
+}
+
+.status-message {
+    margin-left: 20px;
+}
+
+.buttons-message{
+    display: flex;
+    padding-top: 10px;
+}
+
+.back-button, .go-to-notes-button {
+    margin-left: 10px;
+}
+
+.back-button {
+    margin-left: auto;
+}
+
+.go-to-course-button{
+    background-color: rgb(0, 132, 255)
+}
+
+.go-to-course-button:hover {
+    background-color: rgb(0, 86, 167)
+}
+
+.back-button{
+    background-color: rgb(214, 0, 0)
+}
+
+.back-button:hover {
+    background-color: rgb(163, 0, 0)
+}
+
+.message-validation {
+    text-align: left;
+    padding-top: 20px;
+}
+
+.validation-box {
+    animation: fadeIn 1s ease-in; 
+    overflow: hidden;
+}
+
+.warning-icon {
+    color: rgb(163, 0, 0);
+    margin-right: 10px;
+    font-size: 24px;
+}
+[v-cloak] {
+    display: none;
 }
