--- a/dashboard/templates/dashboard/error403.html
+++ b/dashboard/templates/dashboard/error403.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        <title>404 HTML Template by Colorlib</title>
+        <title>Error 403 | Forbidden</title>
         
         <style id="" media="all">/* vietnamese */
         @font-face {
